Use only the most specific existing patch dir for autopatches

--- a/auto-patch/auto-patch.bash.in
+++ b/auto-patch/auto-patch.bash.in
@@ -67,6 +67,7 @@ try_to_apply_patches()
             else
                 einfo "No patches in for this package."
             fi
+            break
         fi
     done
 }
